--- a/ru.html
+++ b/ru.html
@@ -2,11 +2,12 @@
    <head>
       <title>Calculated</title>
 	  <meta http-equiv="content-type" content="text/html; utf-8">
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+	  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+
 	  <style>
    body { 
     margin: 35;
-  font-size: calc(0.75em + 2vmin);
 
 }
 img {
@@ -21,21 +22,21 @@ img {
   <a href="#work">Работа с приложением</a> | 
   <a href="#examples">Примеры использования</a> |  
   <a href="eng">Eng</a>
-<h1 id="overview">Обзор Calculated.</h1>
-<h3>Что такое Calculated.</h3>
+<h2 id="overview">Обзор Calculated.</h2>
+<h4>Что такое Calculated.</h4>
 <p>Calculated - это ваш помощник в ваших делах и различных задачах. Создавайте готовые к использованию документы или черновые версии документов. 
 Ведите учет или планируйте деятельность. <br />
 <a href="https://play.google.com/store/apps/details?id=com.izapps.calculated" target="_blank">Установить приложение.</a>
 </p>
-<h3>Хранение данных.</h3>
+<h4>Хранение данных.</h4>
 <p>Ваши данные хранятся на вашем устройстве и никуда не передаются. Все обязанности по приватности и сохранению данных возлагаются на пользователя. Берегите своё устройство!
 </p>
-<h3>Платформы.</h3>
+<h4>Платформы.</h4>
 <p>В текущий момент приложение работает под Android версии 10 и выше. Планируется так же выпуск под IOS, об этом событии будет объявлено заранее.
 </p>
 
-<h1 id="work">Работа с приложением.</h1>
-<h3>Управление элементами</h3>
+<h2 id="work">Работа с приложением.</h2>
+<h4>Управление элементами</h4>
 <p><font color="#c9211e">Все изменения сохраняются сразу и автоматически.</font><br />
 Для редактирования смахните элемент вправо.<br />
 Для удаления смахните элемент влево.<br />
@@ -45,7 +46,7 @@ img {
 
 <p>При нажатии на элемент вы спускаетесь на уровень ниже в дереве проекта. Дерево проектов состоит из каталогов и элементов.
 </p>
-<h3>Каталог.</h3>
+<h4>Каталог.</h4>
 <p>Каталог предназначен для удобства хранения ваших проектов. Каталог может содержать в себе другие каталоги или элементы.
 Вы можете передать всю информацию из каталога включая подразделы, для этого откройте каталог на редактирования, выберите поделиться - файл данных - clcltd.
 Каталогу можно задать наименование и примечание.
@@ -53,7 +54,7 @@ img {
 <img src="help_html_ced7408be2b53ac0.png"  border="0"/>
 
 
-<h3>Элементы.</h3>
+<h4>Элементы.</h4>
 <p>Элементы имеют более расширенное применение и функции. Так же как и каталоги элементы можно передавать в виде файлов данных, задать им наименование и примечание. 
 Дополнительно элемент можно передать в открытом формате электронных документов (PDF) и формате электронных таблиц, включая все подразделы. Ему можно задать порядковый номер в списке, 
 по умолчанию номер задается максимальный в текущем разделе.
@@ -74,12 +75,12 @@ img {
 </p>
 
 
-<h3>Меню.</h3>
+<h4>Меню.</h4>
 <p>С помощью операций Копировать, Вырезать, Вставить, Выбрать все - управляйте содержанием элементов и каталогов.
 В меню настроек вы можете выбрать язык и задать параметры которые будут отражаться на всех итогах.
 </p>
 
-<h3>Файл данных clcltd.</h3>
+<h4>Файл данных clcltd.</h4>
 <p>Это файл в формате JSON. Может быть сформирован и передан из любой внешней системы. Формат файла:</p>
 <pre>
 {
@@ -108,23 +109,23 @@ img {
    ]
 }
 </pre>
-<h3>Архивирование данных.</h3>
+<h4>Архивирование данных.</h4>
 <p>Для создания резервной копии ваших данных - выгрузите каталог или элемент в файл данных clcltd и сохраните его в любом удобном для вас месте. Далее при необходимости загрузите его снова.
 </p>
-<h1 id="examples">Примеры использования.</h1>
-<h3>Список дел.</h3>
+<h2 id="examples">Примеры использования.</h2>
+<h4>Список дел.</h4>
 <p>Откройте приложение и добавьте новый элемент, нажав кнопку &laquo;+&raquo;. Задайте наименование элемента - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
 </p>
 <img src="todo.png"  border="0"/>
-<h3>Ежедневные расходы / доходы.</h3>
+<h4>Ежедневные расходы / доходы.</h4>
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Расходы&raquo; или &laquo;Доходы&raquo;, нажмите кнопку назад. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте наименование элемента, например - &laquo;Апрель&raquo;. Нажмите кнопку назад и затем нажмите на вновь созданный элемент. Создайте новый элемент с датой расходов, например - &laquo;01&raquo;. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. Вы можете не указывать стоимость товара за единицу, можно внести только наименование товара или услуги, а в единице измерения внести валюту и в количестве указать количество валюты. В содержании элемента &laquo;Апрель&raquo;, на вкладке итоги смотрите итоги и содержание всех дней.
 </p>
 <img src="expens.png"  border="0"/>
-<h3>Инвойсы / Заявки / Прайс-листы.</h3>
+<h4>Инвойсы / Заявки / Прайс-листы.</h4>
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; наименование контрагента или прайс-листа. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. По завершении можете передать документ в формате PDF, XLS или выгрузить файл данных вашим коллегам. Можете сделать декомпозицию данного элемента например отделив прайс-листы овощей и фруктов.
 </p>
 <img src="invoice.png"  border="0"/>
-<h3>Планирование / ремонты / сметы.</h3>
+<h4>Планирование / ремонты / сметы.</h4>
 <p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; планирование / ремонт / смета. Перейдите в раздел список и вносите необходимые материалы, услуги. Можете сделать декомпозицию данного элемента например отделив ремонт спальни и прихожей.
 </p>
 <img src="repair.png"  border="0"/>
