--- a/ru.html
+++ b/ru.html
@@ -2,6 +2,7 @@
    <head>
       <title>Calculated</title>
 	  <meta http-equiv="content-type" content="text/html; utf-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 
