--- a/eng.html
+++ b/eng.html
@@ -1,125 +1,126 @@
 <html>
    <head>
-      <title>Calculated</title>
+      <title>"Calculated"</title>
 	  <meta http-equiv="content-type" content="text/html; utf-8">
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+
 	  <style>
    body { 
     margin: 35;
+
 }
 img {
   -webkit-filter: drop-shadow(1px 1px 1px #222);
   filter: drop-shadow(1px 1px 1px #222);
-}	
+}
+	
   </style>
    </head>
    <body>
-  <a href="#overview">Обзор Calculated</a> | 
-  <a href="#work">Работа с приложением</a> | 
-  <a href="#examples">Примеры использования</a> |  
+  <a href="#overview">Overview of "Calculated"</a> | 
+  <a href="#work">Working with the app</a> | 
+  <a href="#examples">Usage examples</a> |  
   <a href="ru">Rus</a>
-<h3 id="overview">Обзор Calculated.</h3>
-<h4>Что такое Calculated.</h4>
-<p>Calculated - это ваш помощник в ваших делах и различных задачах. Создавайте готовые к использованию документы или черновые версии документов. 
-Ведите учет или планируйте деятельность.
+<h3 id="overview">Overview of "Calculated".</h3>
+<h4>What is "Calculated" ?</h4>
+<p>"Calculated" is your assistant in your affairs and various tasks. Create ready-to-use or draft documents. Keep records or plan activities.
 </p>
-<h4>Хранение данных.</h4>
-<p>Ваши данные хранятся на вашем устройстве и никуда не передаются. Все обязанности по приватности и сохранению данных возлагаются на пользователя. Берегите своё устройство!
+<h4>Data storage.</h4>
+<p>Your data is stored on your device and is not shared with third parties. All responsibilities for privacy and data storage are assigned to the user. Protect your device! 
 </p>
-<h4>Платформы.</h4>
-<p>В текущий момент приложение работает под Android версии 10 и выше. Планируется так же выпуск под IOS, об этом событии будет объявлено заранее.
+<h4>Platforms. </h4>
+<p>Currently, the app runs on Android version 10 and higher. We also plan to release it for IOS; this event will be announced in advance.
 </p>
 
-<h3 id="work">Работа с приложением.</h3>
-<h4>Управление элементами</h4>
-<p><font color="#c9211e">Все изменения сохраняются сразу и автоматически.</font><br />
-Для редактирования смахните элемент вправо.<br />
-Для удаления смахните элемент влево.<br />
-Для выделения или снятия выделения удерживайте элемент некоторое время.<br />
+<h3 id="work">Working with the app.</h3>
+<h4>Elements control </h4>
+<p><font color="#c9211e">All changes are saved immediately and automatically.</font><br />
+To edit, swipe the element to the right.<br />
+To delete, swipe the element to the left.<br />
+To select or deselect, hold the element for some time. <br />
 </p>
 <img src="edit.png"  border="0"/>
 
-<p>При нажатии на элемент вы спускаетесь на уровень ниже в дереве проекта. Дерево проектов состоит из каталогов и элементов.
+<p>By clicking on an element, you go down a level in the project tree. The project tree consists of catalogs and elements.    
 </p>
-<h4>Каталог.</h4>
-<p>Каталог предназначен для удобства хранения ваших проектов. Каталог может содержать в себе другие каталоги или элементы.
-Вы можете передать всю информацию из каталога включая подразделы, для этого откройте каталог для редактирования, выберите поделиться - файл данных - clcltd.
-Каталогу можно задать наименование и примечание.
+<h4>Catalog.</h4>
+<p>The catalog is designed for easy storage of your projects. A catalog can contain other catalogs or elements. You can transfer all the information from the catalog, including the subsections. To do this, open the catalog in edit mode, select share -data file - clcltd. You can set a name and a note for the catalog.
 </p>
 <img src="help_html_ced7408be2b53ac0.png"  border="0"/>
 
 
-<h4>Элементы.</h4>
-<p>Элементы имеют более расширенное применение и функции. Так же как и каталоги элементы можно передавать в виде файлов данных, задать им наименование и примечание. 
-Дополнительно элемент можно передать в открытом формате электронных документов (PDF) и формате электронных таблиц, включая все подразделы. Ему можно задать порядковый номер в списке, 
-по умолчанию номер задается максимальный в текущем разделе.
-Параметр активен предназначен для визуального использования, данный элемент будет во всех списках помечен как перечеркнутый или не будет выводиться в случае если задана настройка
-Цвет устанавливайте по желанию. Помечайте значимость данной задачи цветом или используйте для других целей.</p>
+<h4>Elements. </h4>
+<p>The elements have a more extended usage and functions. Like catalogs, elements can be transferred as data files and set with a name and a note. Additionally, the element can be transferred in portable document format (PDF) and spreadsheet format, including all subsections. It can be assigned a sequential number in the list; by default, the number would be the maximum in the current section. The "active" parameter is intended for visual use; this element will be marked as crossed out in all lists or will not be displayed, depending on the settings. Set the color as desired. Mark the significance of this task with color or use it for other purposes.</p>
 <img src="help_html_892bcf12df59e8e9.png"  border="0"/>
 
-<p>Экран элемента содержит два дополнительных под экрана - список и итоги. Вкладка список содержит товары и услуги используемые в вашем проекте, добавляйте и удаляйте их по вашей необходимости
+<p>The element screen contains two additional sub-screens - the list and totals. The list tab contains the products and services used in your project, add and remove them as needed.
 </p>
 <img src="help_html_e17b293a10568ef9.png"  border="0"/>
 
-<p>После добавления товаров или услуг вы можете заполнить необходимые для вас поля: наименование, измерение наименования, количество, цена за единицу и валюта. 
-Примеры решения различных задач смотрите в разделе - <a href="#examples">Примеры использования</a>.
-Вкладка итоги содержит итоговые данные всего дерева проекта, в итоги входят и текущий элемент и все под элементы.
+<p>After adding products or services, you can fill in the required fields: name, name dimension, quantity, unit price, and currency. For examples of solving various tasks, see the section - <a href="#examples">Usage examples</a>. The totals tab contains the totals of the entire project tree; the totals include both the current element and all sub-elements.
 </p>
 <img src="help_html_da975ece3a3daa0a.png"  border="0"/>
-<p>Вы можете увеличить или уменьшит шрифт в данном отчете, так-же сортировать список по наименованию/количеству.
+<p>You can increase or decrease the font in this report, as well as sort the list by name/quantity.
 </p>
 
 
-<h4>Меню.</h4>
-<p>С помощью операций Копировать, Вырезать, Вставить, Выбрать все - управляйте содержанием элементов и каталогов.
-В меню настроек вы можете выбрать язык и задать параметры которые будут отражаться на всех итогах.
+<h4>Menu.</h4>
+<p>Use the Copy, Cut, Paste, Select All operations to manage the contents of elements and catalogs. In the settings menu, you can select the language and set the parameters that will be reflected in all the results.
 </p>
 
-<h4>Файл данных clcltd.</h4>
-<p>Это файл в формате JSON. Может быть сформирован и передан из любой внешней системы. Формат файла:</p>
+<h4>The "clcltd" data file.</h4>
+<p>This is a file in JSON format. It can be generated and transferred from any external system. File format:</p>
 <pre>
 {
    &quot;e&quot;:[
       {
-         &quot;ElementUUID&quot;:&quot;<b>уникальный идентификатор элемента</b>&quot;,
-         &quot;ElementParentUUID&quot;:&quot;<b>уникальный идентификатор родителя элемента, для элемента верхнего уровня пустое значение</b>&quot;,
-         &quot;ElementName&quot;:&quot;<b>Наименование элемента</b>&quot;,
-         &quot;ElementNote&quot;:&quot;<b>Заметка к элементу</b>&quot;,
+         &quot;ElementUUID&quot;:&quot;<b>element’s universally unique identifier</b>&quot;,
+         &quot;ElementParentUUID&quot;:&quot;<b>Element parent’s universally unique identifier, the top-level element has an empty value</b>&quot;,
+         &quot;ElementName&quot;:&quot;<b>Element name</b>&quot;,
+         &quot;ElementNote&quot;:&quot;<b>Element note</b>&quot;,
          &quot;ElementType&quot;:&quot;<b>ElementType.Element, ElementType.Folder</b>&quot;,
-         &quot;ElementCanceled&quot;:<b>0 или 1</b>,
+         &quot;ElementCanceled&quot;:<b>0 or 1</b>,
          &quot;ElementColor&quot;:&quot;<b>red, green, blue, black</b>&quot;,
-         &quot;ElementPosition&quot;:<b>позиция - Integer 0-999.</b>
+         &quot;ElementPosition&quot;:<b>position - Integer 0-999.</b>
       },.....
    ],
    &quot;ems&quot;:[
       {
-         &quot;ElementUid&quot;:&quot;<b>уникальный идентификатор элемента к которому привязан товар или услуга</b>&quot;,
-         &quot;Uid&quot;:&quot;<b>уникальный идентификатор товара или услуги</b>&quot;,
-         &quot;Name&quot;:&quot;<b>Наименование товара или услуги</b>&quot;,
-         &quot;UnitName&quot;:&quot;<b>Единица измерения</b>&quot;,
-         &quot;UnitOutcomeCnt&quot;:<b>Количество - double</b>,
-         &quot;UnitOutcomeCost&quot;:<b>Стоимость - double</b>,
-         &quot;UnitOutcomeCurr&quot;:&quot;<b>Валюта</b>&quot;
+         &quot;ElementUid&quot;:&quot;<b>element’s unique identifier to which the product or service is linked</b>&quot;,
+         &quot;Uid&quot;:&quot;<b>unique identifier of the product or service</b>&quot;,
+         &quot;Name&quot;:&quot;<b>Name of the product or service</b>&quot;,
+         &quot;UnitName&quot;:&quot;<b>Unit measurement</b>&quot;,
+         &quot;UnitOutcomeCnt&quot;:<b>Quantity - double</b>,
+         &quot;UnitOutcomeCost&quot;:<b>Cost - double</b>,
+         &quot;UnitOutcomeCurr&quot;:&quot;<b>Currency</b>&quot;
       },.....
    ]
 }
 </pre>
 
-<h3 id="examples">Примеры использования.</h3>
-<h4>Список дел.</h4>
-<p>Откройте приложение и добавьте новый элемент, нажав кнопку &laquo;+&raquo;. Задайте наименование элемента - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
+
+<h4>Data archiving. </h4>
+<p>To create a backup copy of your data, upload a catalog or element to the clcltd data file and save it in any place convenient for you. Then, if necessary, download it again.
+</p>
+
+
+<h3 id="examples">Usage examples.</h3>
+<h4>To-do list.</h4>
+<p>Open the app and add a new element by clicking the "+" button. Set the name of the element - "Current affairs", add elements specifying the necessary tasks.
 </p>
 <img src="todo.png"  border="0"/>
-<h4>Ежедневные расходы / доходы.</h4>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Задайте наименование каталога - &laquo;Расходы&raquo; или &laquo;Доходы&raquo;, нажмите кнопку назад. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте наименование элемента, например - &laquo;Апрель&raquo;. Нажмите кнопку назад и затем нажмите на вновь созданный элемент. Создайте новый элемент с датой расходов, например - &laquo;01&raquo;. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. Вы можете не указывать стоимость товара за единицу, можно внести только наименование товара или услуги, а в единице измерения внести валюту и в количестве указать количество валюты. В содержании элемента &laquo;Апрель&raquo;, на вкладке итоги смотрите итоги и содержание всех дней.
+<h4>Daily expenses / income.</h4>
+<p>Open the app and add a new catalog by clicking the "+" button. Set the name of the catalog - "Expenses" or "Income", click the "back" button. Click on the created folder. When you go down to the contents of the catalog, create the element, set the name of the element, for example - "April". Click the "back" button and then click on the newly created element. Create a new element with an expense date, for example, "01". In the element's content, switch to the list tab, add products and services by specifying: name, units of measurement, quantity, unit price, and currency. You can choose not to specify the cost of the product per unit and only enter the name of the product or service; in the unit of measurement, enter the currency and specify the amount of currency in quantity. In the content of the "April" element, on the totals tab, see the totals and contents of all days.
 </p>
 <img src="expens.png"  border="0"/>
-<h4>Инвойсы / Заявки / Прайс-листы.</h4>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; наименование контрагента или прайс-листа. В содержании элемента переключитесь на вкладку список, добавляйте товары и услуги указывая: наименование, единицы измерения, количество, цену за единицу и валюту. По завершении можете передать документ в формате PDF, XLS или выгрузить файл данных вашим коллегам. Можете сделать декомпозицию данного элемента например отделив прайс-листы овощей и фруктов.
+<h4>Invoices / Requests / Price Lists.</h4>
+<p>Open the app and add a new catalog by clicking the "+" button. Click on the created folder. When you go down to the catalog content, create an element and enter any name for it, for example, the name of the counter-party or the price list. In the element's content, switch to the list tab, add products and services by specifying: name, units of measurement, quantity, unit price, and currency. When finished, you can send the document in PDF, XLS formats or upload the data file to your colleagues. You can make decomposition of this element, for example, by separating the price lists of vegetables and fruits.
 </p>
 <img src="invoice.png"  border="0"/>
-<h4>Планирование / ремонты / сметы.</h4>
-<p>Откройте приложение и добавьте новый каталог, нажав кнопку &laquo;+&raquo;. Нажмите на созданный каталог, опустившись в содержание каталога создайте элемент, задайте любое наименование элемента, например &mdash; планирование / ремонт / смета. Перейдите в раздел список и вносите необходимые материалы, услуги. Можете сделать декомпозицию данного элемента например отделив ремонт спальни и прихожей.
+<h4>Planning / renovation / estimates. </h4>
+<p>Open the app and add a new catalog by clicking the "+" button. Click on the created catalog. Go down to the catalog's contents and create an element. Set any name for the element, for example - planning / repair / estimate. Go to the list section and enter the necessary materials and services. You can make decomposition of this element, for example, by separating the renovation of the bedroom and hallway.
 </p>
 <img src="repair.png"  border="0"/>
 
