--- a/ru.html
+++ b/ru.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>Calculated</title>
+      <title>"Calculated"</title>
 	  <meta http-equiv="content-type" content="text/html; utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <!-- CSS only -->
@@ -19,15 +19,15 @@ img {
   </style>
    </head>
    <body>
-  <a href="#overview">Обзор Calculated</a> | 
+  <a href="#overview">Обзор "Calculated"</a> | 
   <a href="#work">Работа с приложением</a> | 
   <a href="#examples">Примеры использования</a> |  
   <a href="eng">Eng</a>
-<h2 id="overview">Обзор Calculated.</h2>
-<h4>Что такое Calculated.</h4>
-<p>Calculated - это ваш помощник в ваших делах и различных задачах. Создавайте готовые к использованию документы или черновые версии документов. 
+<h2 id="overview">Обзор "Calculated".</h2>
+<h4>Что такое "Calculated" ?</h4>
+<p>"Calculated" - это ваш помощник в ваших делах и различных задачах. Создавайте готовые к использованию документы или черновые версии документов. 
 Ведите учет или планируйте деятельность. <br />
-<a href="https://play.google.com/store/apps/details?id=com.izapps.calculated" target="_blank">Установить приложение.</a>
+<a href="https://play.google.com/store/apps/details?id=com.izapps."Calculated"" target="_blank">Установить приложение.</a>
 </p>
 <h4>Хранение данных.</h4>
 <p>Ваши данные хранятся на вашем устройстве и никуда не передаются. Все обязанности по приватности и сохранению данных возлагаются на пользователя. Берегите своё устройство!
