--- a/eng.html
+++ b/eng.html
@@ -25,7 +25,7 @@ img {
   <a href="ru">Rus</a>
 <h3 id="overview">Overview of "Calculated".</h3>
 <h4>What is "Calculated" ?</h4>
-<p>"Calculated" is your assistant in your affairs and various tasks. Create ready-to-use or draft documents. Keep records or plan activities.<br />
+<p>"Calculated" is your assistant in your affairs and various tasks. Create ready-to-use and draft documents. Keep records and plan activities.<br />
 <a href="https://play.google.com/store/apps/details?id=com.izapps."Calculated"" target="_blank">Install the app.</a>
 </p>
 <h4>Data storage.</h4>
