--- a/ru.html
+++ b/ru.html
@@ -25,8 +25,8 @@ img {
   <a href="eng">Eng</a>
 <h2 id="overview">Обзор "Calculated".</h2>
 <h4>Что такое "Calculated" ?</h4>
-<p>"Calculated" - это ваш помощник в ваших делах и различных задачах. Создавайте готовые к использованию документы или черновые версии документов. 
-Ведите учет или планируйте деятельность. <br />
+<p>"Calculated" - это ваш помощник в ваших делах и различных задачах. Создавайте готовые к использованию документы и черновые версии документов. 
+Ведите учет и планируйте деятельность. <br />
 <a href="https://play.google.com/store/apps/details?id=com.izapps."Calculated"" target="_blank">Установить приложение.</a>
 </p>
 <h4>Хранение данных.</h4>
