--- a/ru.html
+++ b/ru.html
@@ -59,7 +59,7 @@ img {
 <p>Элементы имеют более расширенное применение и функции. Так же как и каталоги элементы можно передавать в виде файлов данных, задать им наименование и примечание. 
 Дополнительно элемент можно передать в открытом формате электронных документов (PDF) и формате электронных таблиц, включая все подразделы. Ему можно задать порядковый номер в списке, 
 по умолчанию номер задается максимальный в текущем разделе.
-Параметр активен предназначен для визуального использования, данный элемент будет во всех списках помечен как перечеркнутый или не будет выводиться в случае если задана настройка
+Параметр активен предназначен для визуального использования, данный элемент будет во всех списках помечен как перечеркнутый или не будет выводиться в случае если задана настройка.
 Цвет устанавливайте по желанию. Помечайте значимость данной задачи цветом или используйте для других целей.</p>
 <img src="help_html_892bcf12df59e8e9.png"  border="0"/>
 
