--- a/ru.html
+++ b/ru.html
@@ -114,6 +114,8 @@ img {
 <p>Для создания резервной копии ваших данных - выгрузите каталог или элемент в файл данных clcltd и сохраните его в любом удобном для вас месте. Далее при необходимости загрузите его снова.
 </p>
 <h2 id="examples">Примеры использования.</h2>
+<h4>Работа в программе.</h4>
+<a href="https://www.youtube.com/watch?v=f6QmnY6ayV0" target="_blank">https://www.youtube.com/watch?v=f6QmnY6ayV0</a>
 <h4>Список дел.</h4>
 <p>Откройте приложение и добавьте новый элемент, нажав кнопку &laquo;+&raquo;. Задайте наименование элемента - &laquo;Текущие дела&raquo;, добавляйте элементы указывая необходимые задачи.
 </p>
