--- a/eng.html
+++ b/eng.html
@@ -26,7 +26,7 @@ img {
 <h3 id="overview">Overview of "Calculated".</h3>
 <h4>What is "Calculated" ?</h4>
 <p>"Calculated" is your assistant in your affairs and various tasks. Create ready-to-use and draft documents. Keep records and plan activities.<br />
-<a href="https://play.google.com/store/apps/details?id=com.izapps"Calculated"" target="_blank">Install the app.</a>
+<a href="https://play.google.com/store/apps/details?id=com.izapps.calculated"" target="_blank">Install the app.</a>
 </p>
 <h4>Data storage.</h4>
 <p>Your data is stored on your device and is not shared with third parties. All responsibilities for privacy and data storage are assigned to the user. Protect your device! 
