--- a/ru.html
+++ b/ru.html
@@ -27,7 +27,7 @@ img {
 <h4>Что такое "Calculated" ?</h4>
 <p>"Calculated" - это ваш помощник в ваших делах и различных задачах. Создавайте готовые к использованию документы и черновые версии документов. 
 Ведите учет и планируйте деятельность. <br />
-<a href="https://play.google.com/store/apps/details?id=com.izapps"Calculated"" target="_blank">Установить приложение.</a>
+<a href="https://play.google.com/store/apps/details?id=com.izapps.calculated" target="_blank">Установить приложение.</a>
 </p>
 <h4>Хранение данных.</h4>
 <p>Ваши данные хранятся на вашем устройстве и никуда не передаются. Все обязанности по приватности и сохранению данных возлагаются на пользователя. Берегите своё устройство!
