--- a/eng.html
+++ b/eng.html
@@ -26,7 +26,7 @@ img {
 <h3 id="overview">Overview of "Calculated".</h3>
 <h4>What is "Calculated" ?</h4>
 <p>"Calculated" is your assistant in your affairs and various tasks. Create ready-to-use and draft documents. Keep records and plan activities.<br />
-<a href="https://play.google.com/store/apps/details?id=com.izapps.calculated"" target="_blank">Install the app.</a>
+<a href="https://play.google.com/store/apps/details?id=com.izapps.calculated" target="_blank">Install the app.</a>
 </p>
 <h4>Data storage.</h4>
 <p>Your data is stored on your device and is not shared with third parties. All responsibilities for privacy and data storage are assigned to the user. Protect your device! 
@@ -109,7 +109,7 @@ To select or deselect, hold the element for some time. <br />
 
 <h3 id="examples">Usage examples.</h3>
 <h4>Work in the program.</h4>
-<a href="https://www.youtube.com/watch?v=f6QmnY6ayV0" target="_blank">https://www.youtube.com/watch?v=f6QmnY6ayV0</a>
+<a href="https://www.youtube.com/watch?v=WLBlLob_OOc" target="_blank">https://www.youtube.com/watch?v=f6QmnY6ayV0</a>
 <h4>To-do list.</h4>
 <p>Open the app and add a new element by clicking the "+" button. Set the name of the element - "Current affairs", add elements specifying the necessary tasks.
 </p>
